# python-lambda

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
lambda/: __init__.py  app.py
tests/: test_app.py
tests/.pytest_cache/v/cache/: nodeids
