[tool.poetry]
name = "lambda-local-dev"
version = "0.1.0"
description = "Local development environment for AWS Lambda with S3 and DynamoDB"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "lambda" }
]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.0"
botocore = "^1.34.0"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 